--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "erxes-integrations",
+  "name": "erxes-automations",
   "version": "0.11.2",
-  "description": "erxes integrations",
+  "description": "erxes automations",
   "homepage": "https://erxes.io",
   "repository": {
     "type": "git",
-    "url": "https://github.com/erxes/erxes-integrations"
+    "url": "https://github.com/erxes/erxes-automations"
   },
-  "bugs": "https://github.com/erxes/erxes-integrations/issues",
+  "bugs": "https://github.com/erxes/erxes-automations/issues",
   "keywords": [
     "node",
     "express",
@@ -18,7 +18,7 @@
   "private": true,
   "scripts": {
     "start": "node dist",
-    "dev": "DEBUG=erxes-integrations:* node_modules/.bin/ts-node-dev --respawn src",
+    "dev": "DEBUG=erxes-automations:* node_modules/.bin/ts-node-dev --respawn src",
     "test": "NODE_ENV=test jest --forceExit",
     "build": "tsc -p tsconfig.prod.json",
     "lint": "tslint 'src/**/*.ts'",
@@ -27,9 +27,7 @@
     "migrate": "NODE_ENV=command migrate --migrations-dir='./dist/migrations' --store='./db-migrate-store.js' up",
     "customCommand": "ts-node ./src/commands/customCommand.ts",
     "resetMigrations": "ts-node ./src/commands/resetMigrations.ts",
-    "release": "release-it",
-    "snyk-protect": "snyk protect",
-    "prepare": "yarn run snyk-protect"
+    "release": "release-it"
   },
   "lint-staged": {
     "*.ts": [
@@ -61,7 +59,6 @@
     "request-promise": "^4.2.4",
     "sanitize-html": "^1.20.1",
     "sinon": "^7.5.0",
-    "snyk": "^1.239.5",
     "uuid": "^3.3.3"
   },
   "peerOptionalDependencies": {
