--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     "request-promise": "^4.2.4",
     "sanitize-html": "^1.20.1",
     "sinon": "^7.5.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "apollo-server-express": "^2.9.7",
+    "cors": "^2.8.1",
+    "redis": "^2.8.0"
   },
   "peerOptionalDependencies": {
     "kerberos": "^1.0.0"
